--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ distribute==0.6.28
 dj-database-url==0.2.1
 psycopg2==2.4.6
 wsgiref==0.1.2
--e git+git://github.com/mwieler/django-registration-1.5.git
+git+git://github.com/mwieler/django-registration-1.5.git
