--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ dj-database-url==0.2.1
 psycopg2==2.4.6
 wsgiref==0.1.2
 git+git://github.com/mwieler/django-registration-1.5.git
+git+git://github.com/yourcelf/django-registration-defaults.git
