--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ psycopg2==2.4.6
 wsgiref==0.1.2
 -e hg+https://bitbucket.org/ubernostrum/django-registration#egg=django-registration
 git+git://github.com/yourcelf/django-registration-defaults.git
-djrill=0.4.0
+djrill==0.4.0
